algo-hsplit-2